# facet-jsonschema

./: CHANGELOG.md  Cargo.toml  README.md  README.md.in
src/: lib.rs
tests/: jsonschema.rs
tests/snapshots/: jsonschema__basic.snap  jsonschema__pointers.snap
