[package]
name = "facet-jsonschema"
version = "0.23.23"
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet-jsonschema"
description = "Generate JSON Schema from Facet types. Provides a `to_string` function to get a JSON Schema representation as a string. Useful for reflection, introspection, serialization, and deserialization."
keywords = [
    "reflection",
    "introspection",
    "serialization",
    "deserialization",
    "json-schema",
]
categories = ["development-tools", "encoding"]

[dependencies]
facet-core = { version = "0.28.0" }
facet-macros = { version = "0.28.0" }

[dev-dependencies]
insta = "1.43.1"
facet = { version = "0.28.0" }
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
